--- a/.env
+++ b/.env
@@ -6,6 +6,7 @@
 
 DATABASE_URL="mongodb+srv://weraldopolento:HyQmLkPjDCSb7mUa@cluster0.f3ltj.mongodb.net/palabunutan?retryWrites=true&w=majority&appName=Cluster0"
 
+AUTH_SECRET="xbkjt6MNGlt/PdbiVtCQw72OVp1NzpYaZT2+I8QbG1Y="
 
 
 # HyQmLkPjDCSb7mUa
