--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.465.0",
     "next": "14.2.16",
+    "next-auth": "^5.0.0-beta.25",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.2",
+    "react-icons": "^5.4.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
